--- a/views/fruits/show.ejs
+++ b/views/fruits/show.ejs
@@ -13,5 +13,10 @@
     <% } else { %>
       <p>This fruit is NOT ready to eat!</p>
     <%} %>
+
+    <form action="/fruits/<%= fruit._id %>?_method=DELETE" method="POST">
+      <button type="submit">Delete <%= fruit.name %></button>
+    </form>
+
   </body>
 </html>
